# retrieval-augumented-analytics-dashboard

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.yml  task.yml
.github/workflows/: ci.yml  close-phase-1-2-issues.yml  close-phase-3-4-issues.yml  close-phase-5-7-issues.yml  create-roadmap-issues.yml
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  logging_config.py  main.py  metrics.py
backend/src/api/: middleware.py  routes.py
backend/src/pipeline/: executor.py  explainer.py  orchestrator.py  schema_retriever.py  sql_validator.py  text_to_sql.py
backend/src/pipeline/few_shots/: ecommerce.jsonl
backend/tests/: conftest.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_schema_retriever.py  test_sql_validator.py
data/: generate_sample.py
docs/adr/: 001-duckdb-over-sqlite.md  002-sqlglot-validation.md  003-sse-over-websockets.md
evals/: README.md  golden_set.jsonl  run_evals.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChartRenderer.tsx  ExplanationPanel.tsx  QueryInput.tsx  ResultTable.tsx  SqlPanel.tsx
frontend/src/hooks/: useQueryStream.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: query_flow.spec.ts
infra/: docker-compose.monitoring.yml  docker-compose.yml
infra/grafana/provisioning/dashboards/: dashboard.yaml  raa-dashboard.json
infra/prometheus/: prometheus.yml
