[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "raa-dashboard-backend"
version = "1.0.0"
description = "Backend for Retrieval-Augmented Analytics (RAA) Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "duckdb>=0.10",
    "sqlglot>=23",
    "openai>=1.30",
    "httpx>=0.27",
    "redis[asyncio]>=5.0",
    "prometheus-client>=0.20",
    "structlog>=24",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.2",
    "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
